--- a/htdocs/web/assets/v2/bootstrap/css/bootstrap.css
+++ b/htdocs/web/assets/v2/bootstrap/css/bootstrap.css
@@ -1086,12 +1086,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #46c37b;
+  color: #fb081a;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #2e8e57;
+  color: #fb081a;
   text-decoration: none;
 }
 a:focus {
@@ -1328,7 +1328,7 @@ mark,
 }
 .bg-primary {
   color: #fff;
-  background-color: #46c37b;
+  background-color: #fb081a;
 }
 a.bg-primary:hover {
   background-color: #34a263;
@@ -2511,7 +2511,7 @@ output {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-control:focus {
-  border-color: #46c37b;
+  border-color: #fb081a;
   outline: 0;
 }
 .form-control::-moz-placeholder {
@@ -3130,7 +3130,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #46c37b;
+  background-color: #fb081a;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3556,7 +3556,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background: none;
-  border-color: #46c37b;
+  border-color: #fb081a;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3649,7 +3649,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #46c37b;
+  background-color: #fb081a;
 }
 .nav-stacked > li {
   float: none;
@@ -4410,7 +4410,7 @@ a.label:focus {
   background-color: #c8c8c8;
 }
 .label-primary {
-  background-color: #46c37b;
+  background-color: #fb081a;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4478,7 +4478,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #46c37b;
+  color: #fb081a;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -4549,7 +4549,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #46c37b;
+  border-color: #fb081a;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4618,7 +4618,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #46c37b;
+  background-color: #fb081a;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4770,8 +4770,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #46c37b;
-  border-color: #46c37b;
+  background-color: #fb081a;
+  border-color: #fb081a;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5136,16 +5136,16 @@ a.list-group-item-danger.active:focus {
   border-color: #e1e1e1;
 }
 .panel-primary > .panel-heading {
-  color: #46c37b;
-  background-color: #46c37b;
+  color: #fb081a;
+  background-color: #fb081a;
   border-color: #e1e1e1;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #e1e1e1;
 }
 .panel-primary > .panel-heading .badge {
-  color: #46c37b;
-  background-color: #46c37b;
+  color: #fb081a;
+  background-color: #fb081a;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #e1e1e1;
