首页和数据库改动

--- a/htdocs/src/Permission/PermissionBundle/Resources/views/Templates/new-navigation.html.twig
+++ b/htdocs/src/Permission/PermissionBundle/Resources/views/Templates/new-navigation.html.twig
@@ -4,7 +4,7 @@
   {% if menu|default(null) %}
     {% set rootMenu = menu|parent_permission.code|parent_permission %}
   {% else %}
-    {% set rootMenu = permission('admin') %}
+    {% set rootMenu = permission('newadmin') %}
   {% endif %}
 
   <ul class="nav navbar-nav">
