--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Course/index.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Course/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_course_manage' %}
+{% set menu = 'newadmin_course_manage' %}
 
 {% set script_controller = 'course/manage' %}
 
