--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/groups.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/groups.html.twig
@@ -43,7 +43,7 @@
         </div>
       </div>
       {% endif %}#}
-      {% if config.select2 =='checked'%}
+      {#{% if config.select2 =='checked'%}#}
       <div class="col-md-6">
         <div class="panel panel-default index-article">
           <div class="panel-heading">
@@ -79,8 +79,8 @@
           </div>
         </div>
       </div>
-      {% endif %}
-      {% if config.select3 =='checked'%}
+      {#{% endif %}#}
+      {#{% if config.select3 =='checked'%}#}
       <div class="col-md-6">
         <div class="panel panel-default index-evaluate">
           <div class="panel-heading">
@@ -118,8 +118,8 @@
           </div>
         </div>
       </div>
-      {% endif %}
-      {% if config.select4 =='checked'%}
+      {#{% endif %}#}
+      {#{% if config.select4 =='checked'%}#}
       <div class="col-md-6">
         <div class="panel panel-default index-dynamic">
           <div class="panel-heading">
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      {% endif %}
+      {#{% endif %}#}
     </div>
   </div>
 </section>
