--- a/htdocs/src/Topxia/WebBundle/Resources/views/old-layout.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/old-layout.html.twig
@@ -11,6 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <base href="{{app.request.getSchemeAndHttpHost()}}" />
   <title>
     {%- block title -%}
       {{ setting('site.name', 'kmbdqn') }}{% if setting('site.slogan') %} - {{ setting('site.slogan') }}{% endif %}{% if  setting('copyright.owned','0') != '1' or setting('copyright.thirdCopyright')|default(0) == 2 %} - Powered By YNKMBDQN{% endif %}
@@ -29,6 +30,7 @@
   <!-- Bootstrap -->
 
 	<link href="assets/css/mouyong_index.css" rel="stylesheet" />
+  <link href="assets/css/carousel.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
