--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
@@ -50,7 +50,7 @@
         <a href="javascript:;" class="btn btn-default {% if (orderBy|default('recommendedSeq') == 'recommendedSeq') %} active {% endif %}js-course-filter" data-url="{{path('homepage_category',{categoryId : categoryId|default(0), orderBy : 'recommendedSeq'}) }}" data-type='course'>
           {{'推荐'|trans}}
         </a>
-         <a href="#modal" data-toggle="modal" data-url="{{ path('student_add', {id: school_id})  }}" class="btn btn-default  js-course-filter" >我要报名该所学校</a>{#<a href="#modal" data-toggle="modal" data-url="{{ path('student_add', {id: school_id})  }}" class="btn btn-default">我要报名该所学校</a>#}
+         <a href="#modal" data-toggle="modal" data-url="{{ path('student_add', {id: school_id})  }}" class="btn btn-default  js-course-filter" >{{'我要报名该所学校'|trans}}</a>{#<a href="#modal" data-toggle="modal" data-url="{{ path('student_add', {id: school_id})  }}" class="btn btn-default">我要报名该所学校</a>#}
       </div>
     </div>
     <div class="course-list">
