--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/old-index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/old-index.html.twig
@@ -21,10 +21,66 @@
       {{ block_show('jianmo:home_top_banner') }}
     {% endcache %}#}
   <body>
+  <style>
+  	 <style type="text/css">  
+        .dropdown-submenu {  
+            position: relative;
+			
+        }  
+        .dropdown-submenu > .dropdown-menu {  
+            top: 0;  
+            left: 100%;  
+           
+            -webkit-border-radius: 0 6px 6px 6px;  
+            -moz-border-radius: 0 6px 6px;  
+            border-radius: 0 6px 6px 6px;
+			background: rgba(255, 255, 255, 0.7);
+        }  
+        .dropdown-submenu:hover > .dropdown-menu {  
+            display: block;  
+        }  
+        .dropdown-submenu > a:after {  
+            display: block;  
+            content: " ";  
+            float: right;  
+            width: 0;  
+            height: 0;  
+            border-color: transparent;  
+            border-style: solid;  
+            border-width: 5px 0 5px 5px;  
+            border-left-color: #ccc;  
+            margin-top: 5px;  
+           
+        }  
+        .dropdown-submenu:hover > a:after {  
+            border-left-color: #fff;  
+        }  
+        .dropdown-submenu.pull-left {  
+            float: none;  
+        }  
+        .dropdown-submenu.pull-left > .dropdown-menu {  
+            
+            -webkit-border-radius: 6px 0 6px 6px;  
+            -moz-border-radius: 6px 0 6px 6px;  
+            border-radius: 6px 0 6px 6px;  
+        }
+		#digset-list{
+			border:0px;
+			height:400px;
+			width:300px;
+		}
+		.dropdown-menu > li > a{
+			color:#fb081a;
+		}
+		.dropdown-menu > li{
+			font-size:22px;
+		}
+    </style>  
+  </style>
    <div class="container">
    		<header class="row">
 			<div class="col-md-3"><img src="assets/img/index/tongyanglogo.jpg" /></div>
-			<div class="col-md-4 down-10">
+			{#<div class="col-md-4 down-10">
 				<form action="#" class="form-inline" role="form">
 					<div class="form-group">
 						<div class="input-group">
@@ -33,98 +89,164 @@
 						</div>
 					</div>
 				</form>
-			</div>
-			<div class="col-md-5 down-10">
+			</div>#}
+			<div class="col-md-offset-10">
+				
 				<div class="row">
-					<div class="col-md-4">
-				<form action="#" class="form-horizontal" rola="form">
-					<div class="form-group">
-						<div class="input-group">
-							<select class="form-control">
-								<option value="切换城市">----切换城市----</option>
-									{% for city in citys %}
-										<option value="{{city.id}}">{{ city.name|default('') }}</option>
-									{% endfor %}
-							</select>
-						</div>
+					<div class="col-md-12">
+						{#<form action="#" class="form-horizontal" rola="form">
+							<div class="form-group">
+								<div class="input-group">
+									<select class="form-control">
+										<option value="切换城市">----切换城市----</option>
+											{% for city in citys %}
+												<option value="{{city.id}}">{{ city.name|default('') }}</option>
+											{% endfor %}
+									</select>
+								</div>
+							</div>
+						</form>#}
 					</div>
-				</form>
 				</div>
-				<div class="col-md-4">
+				<div class="row">
+				<div class="col-md-12">
 					{% if user and user.id != 0 %}
-						<a href="{{ path('newadmin') }}">{{'欢迎您'|trans}}{{ user.nickname|default('')}}</a>
+						<a href="{{ path('newadmin') }}">{{'欢迎您'|trans}}{{ user.nickname|default('')}}</a>|
 						<a href="{{ path('logout')}}">{{'注销'|trans}}</a>
 					{% else %}
 						<a href="{{ path('login_background') }}">{{'会员登录'|trans}}</a>
 					{% endif %}
 				</div>
-				<div class="col-md-4">收藏夹</div>
 				</div>
+				<div class="row">
+				<div class="col-md-12">收藏夹</div>
+				</div>
+				
 			</div>
 		</header>
 		<div id="course-digest">
 				<div id="course-menu" class="row shadow">
 					<div id="course-digest-title" class="col-md-3 background-red">
 						
-						<i class="glyphicon glyphicon-th-large font-color-white">课程分类</i>
-						
+						<a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="#">
+							<i class="glyphicon glyphicon-th-large font-color-white  down-10">课程分类</i><span class="caret font-color-white"></span>
+						</a>
+						<ol id="digset-list" class="col-md-6 dropdown-menu multi-level" role="menu" aria-labelledby="dLabel">
+						{% if list %}
+					
+					{% set preLevel = list[0] %}
+					{% for level in list %}
+					{% if loop.index !=1 %}
+						{% if preLevel.level < level.level %}
+
+								<li class="dropdown-submenu">
+								<a  tabindex="-1" href="javascript:;">{{ preLevel.name|default('') }}</a>
+								<ol class="dropdown-menu">
+							{% if loop.last %}
+								{% if level.level - preLevel.level  == 1 %}
+									<li>{{ level.name|default('') }}</li>	
+									</dl></li>
+								{% elseif level.level - preLevel.level  == 2 %}
+									<li>{{ level.name|default('') }}</li>
+									</ol></li>
+									</ol></li>
+								{% endif %}
+							{% endif %}
+							{% set preLevel = level %}
+						{% elseif preLevel.level == level.level %}
+							<li>{{ preLevel.name|default('') }}</li>
+							{% if loop.last %}
+								<li>{{ level.name|default('') }}</li>
+							{% endif %}
+							{% set preLevel = level %}
+						{% elseif preLevel.level > level.level and preLevel.level - level.level == 1 %}
+							<li>{{ preLevel.name|default('') }}</li>
+							</ol></li>
+							{% set preLevel = level %}
+						{% elseif preLevel.level > level.level and preLevel.level - level.level == 2 %}
+							<li>{{ preLevel.name|default('') }}</li>
+							</ol></li>
+							</ol></li>
+							{% set preLevel = level %}
+						{% endif %}
+					{% endif %}
+					{% endfor %}
+					</ol>
+					{% else %}
+						<li>学历文凭</li>
+						<li>Education</li>
+						<li>职业技能</li>
+						<li>Vocational Skill</li>
+						<li>出国留学</li>
+						<li>Study Abroad</li>
+						<li>课外辅导</li>
+						<li>Tutorship</li>
+						<li>才艺专长</li>
+						<li>Art Training</li>
+						<li>企业管理</li>
+						<li>Business Managerment</li>
+					</ol>
+					{% endif %}
 					</div>
-					<div id="course-nav" class="col-md-6">
+					<div id="course-nav" class="col-md-offset-1">
 						<i class="glyphicon glyphicon-home">首页</i>
 						<i class="glyphicon glyphicon-list-alt">文章资讯</i>
 						<i class="glyphicon glyphicon-gift">学校分类</i>
 					</div>
-					<div class="col-md-2"><img src="assets/img/index/customer-course.jpg" />定制课程</div>
+					<div class="col-md-offset-3"><img src="assets/img/index/customer-course.jpg" />定制课程</div>
 			</div>
 				
 				<div id="course-adv" class="row shadow down-10 dropdown">
-					<a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="#">
-    				全部课程 <span class="caret"></span>
-  					</a>
-					<dl id="digset-list" class="col-md-3 dropdown-menu" role="menu" aria-labelledby="dLabel">
-						{% if list %}
-					{% set isUl = 1 %}
-					{% for level in list %}
-						{% if isUl < level.level %}
-							{% set isUl = level.level %}
-								<dt class="mysubmenu">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ '更多.. ' }}</a>
-								<dl class="dropdown-menu1">
-								<dt><a  href="#">{{ level.name|default('') }}</a></dt>
-								<dd></dd>
-						{% elseif isUl == level.level %}
-							<dt>{{ level.name|default('') }}</dt>
-							<dd></dd>
-						{% elseif isUl > level.level and isUl - level.level == 1 %}
-							{% set isUl = level.level %}
-							</dl></dt>
-							<dt>{{ level.name|default('') }}</dt>
-							<dd></dd>
-						{% elseif isUl > level.level and isUl - level.level == 2 %}
-							{% set isUl = level.level %}
-							</dl></dt>
-							</dl></dt>
-							<dt>{{ level.name|default('') }}</dt>
-							<dd></dd>
-						{% endif %}
-					{% endfor %}
-					</dl>
-					{% else %}
-						<dt>学历文凭</dt>
-						<dd>Education</dd>
-						<dt>职业技能</dt>
-						<dd>Vocational Skill</dd>
-						<dt>出国留学</dt>
-						<dd>Study Abroad</dd>
-						<dt>课外辅导</dt>
-						<dd>Tutorship</dd>
-						<dt>才艺专长</dt>
-						<dd>Art Training</dd>
-						<dt>企业管理</dt>
-						<dd>Business Managerment</dd>
-					</dl>
-					{% endif %}
-					{#<div class="col-md-9"><img src="assets/img/index/adv1.jpg" /></div>#}
+					<div class="col-md-12">
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="assets/img/index/adv1.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+	</div>
 				</div>
 				<div id="tongyan-policy" class="row down-10 shadow">
 				<div class="col-md-6"><img src="assets/img/index/mywords.jpg" /></div>
@@ -316,6 +438,7 @@
         );
     }); // end ready
     </script>#}
+	
   </body>
 </html>
  
